--- a/Getting Started with Tableau/Final Project.ipynb
+++ b/Getting Started with Tableau/Final Project.ipynb
@@ -86,36 +86,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import random\n",
-    "#import squarify\n",
-    "\n",
-    "# Plotly\n",
-    "# import plotly.express as px\n",
-    "# import plotly.offline as py\n",
-    "# import plotly.graph_objs as go\n",
-    "\n",
-    "\n",
-    "#import statsmodels.api as sm\n",
-    "#import statsmodels.formula.api as smf\n",
-    "# from statsmodels.formula.api import ols\n",
-    "# Import variance_inflation_factor from statsmodels\n",
-    "#from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
-    "# Import Tukey's HSD function\n",
-    "#from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
     "\n",
     "import datetime\n",
     "from datetime import datetime, timedelta, date\n",
     "\n",
-    "\n",
-    "#import os\n",
-    "#import zipfile\n",
-    "import scipy\n",
-    "from scipy import stats\n",
-    "from scipy.stats.mstats import normaltest # D'Agostino K^2 Test\n",
-    "from scipy.stats import boxcox\n",
-    "from collections import Counter\n",
-    "\n",
     "# Use Folium library to plot values on a map.\n",
-    "#import folium\n",
+    "import folium\n",
+    "from geopy.geocoders import Nominatim\n",
     "\n",
     "%matplotlib inline\n",
     "#sets the default autosave frequency in seconds\n",
@@ -143,15 +120,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#openai.api_key = \"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\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,76 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"diamonds.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df = pd.read_csv(\"financialdata.csv\", parse_dates=['date'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df = pd.read_excel(\"sales.xls\", index_col = 0, header = 0)\n",
-    "#df.to_excel(\"filename.xls\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#url = \"https://en.wikipedia.org/wiki/1976_Summer_Olympics_medal_table\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df = pd.read_html(url)[3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**==========================================================================================================**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Quick Glance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
+    "df = pd.read_csv(\"WHR_15_23.csv\")"
    ]
   },
   {
@@ -269,26 +168,6 @@
    "source": [
     "# Descriptive Statistical Analysis\n",
     "df.describe(include=\"all\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Descriptive Statistical Analysis\n",
-    "df.describe(include=[\"int\", \"float\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Descriptive Statistical Analysis\n",
-    "df.describe(include=\"object\")"
    ]
   },
   {
@@ -340,148 +219,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split into categorical and numeric dataframes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_num = df[['age', 'conservativeness', 'infooninternet', 'privacyimportance']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_num"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.pivot_table(data=df, index=\"privacylawseffective\", values=\"age\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.pivot_table(data=df, index=\"privacylawseffective\", columns=\"conservativeness\", values = \"age\" , aggfunc=\"mean\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.pivot_table(data=df, index=\"privacylawseffective\", columns=\"infooninternet\", values = \"privacyimportance\" , aggfunc=\"mean\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cat = df[['cut', 'color', 'clarity']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cat[\"cut\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cat[\"color\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cat[\"clarity\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.pivot_table(data=df, index=\"privacylawseffebctive\", columns=\"sex\", values=\"anonymitypossible\", aggfunc=\"mean\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.pivot_table(data=df, index=\"privacylawseffective\", columns=\"internetuse\", values=\"smartphone\", aggfunc=\"mean\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**==========================================================================================================**"
    ]
   },
@@ -498,116 +235,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sample a smaller dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.sample(frac=0.25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.reset_index(drop=True, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.sort_values(by = \"label\", ascending=True).head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.balance.plot(kind = \"hist\", figsize = (12,5), fontsize = 12)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.amount.plot(kind = \"hist\", figsize = (12,5), fontsize = 12)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.label.value_counts().sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.age.value_counts().nlargest(10).plot(kind=\"bar\")\n",
-    "plt.title(\"title\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.duration.unique()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**==========================================================================================================**"
    ]
   },
@@ -615,11 +242,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Filtering\n",
-    "\n",
-    "### Filtering with logical operators\n",
-    "\n",
-    "We can use the logical operators on column values to filter rows. First, we  specify the name of our data, then, square brackets to select the name of the column, double 'equal' sign, '==' to select the name of a row group, in single or double quotation marks. If we want to exclude some entries (e.g. some locations), we would use the 'equal' and 'exclamation point' signs together, '=!'. We can also use '</>', '<=/>=' signs to select numeric information."
+    "## Task 1 - Happiness status overview\n",
+    "Create a highlighted table representing the average happiness score for each region with a relevant title and that works as a filter for the dashboard"
    ]
   },
   {
@@ -628,17 +252,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FBJan = df[df['FBAdCampaign'] == 'FB_Jan19']\n",
-    "FBJan.head()"
+    "happy = pd.DataFrame(df.groupby([\"region\"], as_index=True)[\"happiness_score\"].mean())\n",
+    "happy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countryhappy = pd.DataFrame(df.groupby([\"country\"], as_index=False)[\"happiness_score\"].mean())\n",
+    "countryhappy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort the dataset based on happiness score\n",
+    "sorted_data = countryhappy.sort_values(by='happiness_score', ascending=False)\n",
+    "sorted_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the top 10 happiest countries\n",
+    "top_10 = sorted_data.head(10)\n",
+    "top_10"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filtering by multiple conditions\n",
-    "\n",
-    "There are many alternative ways to perform filtering in pandas. We can also use '|' ('or') and '&' (and) to select multiple columns and rows. "
+    "## Create a map to display the 10 most happy countries."
    ]
   },
   {
@@ -647,8 +301,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mult_loc = df[(df['FBAdCampaign'] == \"FB_Jan19\") | (df['AdWordsAdCampaign'] == \"AW_Dec19\")]\n",
-    "mult_loc"
+    "# Initialize geocoder\n",
+    "geolocator = Nominatim(user_agent=\"happiness_map\")"
    ]
   },
   {
@@ -657,9 +311,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities = ['Calgary', 'Toronto', 'Edmonton']\n",
-    "CTE = data[data.City.isin(cities)]\n",
-    "CTE"
+    "# Create a map centered on the world\n",
+    "m = folium.Map(location=[0, 0], zoom_start=2)\n",
+    "m;"
    ]
   },
   {
@@ -668,32 +322,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.nunique(dropna = False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**==========================================================================================================**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Groupby\n",
-    "\n",
-    "Most commonly, we use `groupby()` to split the data into groups,this will apply some function to each of the groups (e.g. mean, median, min, max, count), then combine the results into a data structure. For example, let's select the 'VALUE' column and calculate the mean of the gasoline prices per year. First, we specify the 'Year\" column, following by the 'VALUE' column, and the `mean()` function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns"
+    "# Add markers for the top 10 happiest countries\n",
+    "for index, row in top_10.iterrows():\n",
+    "    country = row['country']\n",
+    "    happiness_score = row['happiness_score']\n",
+    "    \n",
+    "    # Use geocoding to get latitude and longitude\n",
+    "    location = geolocator.geocode(country)\n",
+    "    \n",
+    "      \n",
+    "    # Create marker\n",
+    "    marker = folium.Marker(location=[lat, lon], popup=f\"{country}: {happiness_score}\")\n",
+    "        \n",
+    "    # Add marker to map\n",
+    "    marker.add_to(m)\n"
    ]
   },
   {
@@ -701,18 +343,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_num.columns"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.groupby([\"privacylawseffective\"], as_index=True).mean()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
